--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
 /build/
+.classpath
+.classpath
+.classpath
+.metadata/.log
+.metadata/.mylyn/repositories.xml.zip
+.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/GitProjectData.properties
+.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/.indexes/properties.index
+*.zip
+*.version
+*.index
+*.tree
+*.resources
+*.prefs
+*.xml
+*.fdx
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/history/_0.fdt
+RemoteSystemsTempFiles/.project
+*.ini
+.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.pavani_0/H.local_16/node.properties
+.metadata/.plugins/org.eclipse.rse.core/initializerMarks/org.eclipse.rse.internal.core.RSELocalConnectionInitializer.mark
+.metadata/.plugins/org.eclipse.pde.core/.cache/clean-cache.properties
+*.log
+.metadata/.plugins/org.eclipse.jdt.core/nonChainingJarsCache
+*.nrm
