changes in patient(listof doctors)

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ RemoteSystemsTempFiles/.project
 .metadata/.plugins/org.eclipse.jdt.core/nonChainingJarsCache
 *.nrm
 .classpath
+.classpath
+.classpath
+.classpath
+.classpath
