--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ RemoteSystemsTempFiles/.project
 .settings/org.eclipse.wst.common.project.facet.core.xml
 .settings/org.eclipse.wst.common.project.facet.core.xml
 .settings/org.eclipse.wst.common.project.facet.core.xml
+.settings/org.eclipse.jdt.core.prefs
